[workspace]

resolver = "2"

members = [
    "event-driven",
    "event-driven-macros",
    "kv_store",
    "machine",
    "streambed-machine",
]

[workspace.package]
description = "Event Driven Finite State Machine library"
readme = "README.md"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/titanclass/edfsm.git"

[workspace.dependencies]
event-driven-macros = { path = "event-driven-macros", version = "0.7.0" }
edfsm = { path = "event-driven", version = "0.7.0" }
streambed-machine = { path = "streambed-machine", version = "0.1.0" }
