[workspace]

resolver = "2"

members = ["edfsm", "edfsm-macros", "edfsm-kv-store", "edfsm-machine"]

[workspace.package]
description = "Event Driven Finite State Machine library"
readme = "README.md"
version = "0.9.0"                                         # WHEN CHANGING THIS, CHANGE THE "EDFSM*" DEPENDENCIES BELOW ALSO.
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/titanclass/edfsm.git"

[workspace.dependencies]
derive_more = "1"
embassy-sync = "0.6.0"
futures-util = "0.3"
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
serde = "1"
serde_json = "1"
serde_qs = "0.13"
smol_str = "0.3.2"
streambed-codec = "0.12.0"
streambed-logged = "0.12.0"
syn = "1"
tokio = "1"

edfsm = { path = "edfsm", version = "0.9.0" }
edfsm-macros = { path = "edfsm-macros", version = "0.9.0" }
edfsm-machine = { path = "edfsm-machine", version = "0.9.0" }
