[package]
name = "edfsm-machine"
description = "Tasks and Channels for Event Driven Finite State Machines"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-broadcast = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
edfsm.workspace = true
embassy-sync = { workspace = true, optional = true }
futures-util = { workspace = true }
streambed-codec = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }


[dev-dependencies]
derive_more = { workspace = true, features = ["try_into"] }
edfsm-machine = { path = ".", features = ["streambed"] }
serde = { workspace = true }
streambed-logged = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["tokio", "async-broadcast"]
embassy = ["dep:embassy-sync"]
std = []
streambed = ["dep:streambed-codec"]
tokio = ["dep:tokio", "std"]
async-broadcast = ["dep:async-broadcast", "std"]
