[package]
name = "edfsm-persistance"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
edfsm.workspace = true
edfsm-machine.workspace = true
