[package]
name = "edfsm-persistance"
description = "Store latest events in sqlite"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["try_into"] }
edfsm.workspace = true
edfsm-machine.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
