[package]
name = "event-driven-macros"
version = "0.7.0"
edition = "2021"
description = "Macros for the Event Driven Finite State Machine library"
license = "Apache-2.0"
repository = "https://github.com/titanclass/edfsm.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
