[package]
name = "event-driven-macros"
description = "Macros for the Event Driven Finite State Machine library"

readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
