[package]
name = "edfsm"
version = "0.5.1"
edition = "2021"
description = "Event Driven Finite State Machine library"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/titanclass/edfsm.git"

[dependencies]
event-driven-macros = { path = "../event-driven-macros", version = "0.5.0" }
