[package]
name = "kv_store"
description = "A KV Store based on edfsm FSM"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edfsm.workspace = true
machine = { workspace = true, optional = true }
smol_str = { version = "0.3.2", default-features = false }
derive_more = { version = "1", features = ["from"] }
tokio = { version = "1", features = ["sync"], optional = true }
embassy-sync = { version = "0.6.0", optional = true }

[dev-dependencies]
machine.workspace = true
streambed-patterns = "0.11"
tokio = { version = "1", features = ["full"] }
serde = "1"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:machine", "std"]
embassy = ["dep:embassy-sync"]
std = ["smol_str/std"]
