[package]
name = "machine"
version = "0.1.0"
edition = "2021"
description = "Tasks and Channels for Event Driven Finite State Machines"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/titanclass/edfsm.git"

[dependencies]
edfsm = { path = "../event-driven", version = "0.7" }
tokio = { version = "1", features = ["sync"], optional = true }
derive_more = { version = "1", features = ["from"] }
futures-util = { version = "0.3", default-features = false }
embassy-sync = { version = "0.6.0", optional = true }
streambed-machine = { path = "../streambed-machine", version = "0.1", optional = true }

[dev-dependencies]
derive_more = { version = "1", features = ["from", "try_into"] }
tokio = { version = "1", features = ["full"] }
streambed-logged = "0.11"
serde = "1"

[features]
default = ["tokio", "streambed"]
tokio = ["dep:tokio", "std"]
streambed = ["dep:streambed-machine"]
embassy = ["dep:embassy-sync"]
std = []
