[package]
name = "machine"
description = "Tasks and Channels for Event Driven Finite State Machines"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edfsm.workspace = true
tokio = { version = "1", features = ["sync"], optional = true }
derive_more = { version = "1", features = ["from"] }
futures-util = { version = "0.3", default-features = false }
embassy-sync = { version = "0.6.0", optional = true }
streambed-machine = { path = "../streambed-machine", version = "0.1", optional = true }

[dev-dependencies]
derive_more = { version = "1", features = ["from", "try_into"] }
tokio = { version = "1", features = ["full"] }
streambed-logged = "0.11"
serde = "1"

[features]
default = ["tokio", "streambed"]
tokio = ["dep:tokio", "std"]
streambed = ["dep:streambed-machine"]
embassy = ["dep:embassy-sync"]
std = []
