[package]
name = "streambed-machine"
description = "Simplified interface to streambed CommitLog"
readme = "README.md"

version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
streambed = { version = "0.11" }
rand = { version = "0.8" }
ciborium = { version = "0.2" }
serde = { version = "1" }
futures-util = { version = "0.3", default-features = false }
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
streambed-logged = "0.11"
edfsm = { path = "../event-driven", version = "0.7" }
streambed-confidant = "0.11"
